--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 cycler==0.10.0
-Django==2.1.2
+defusedxml==0.5.0
+Django==2.1.5
+django-bootstrap-breadcrumbs==0.9.1
 kiwisolver==1.0.1
-matplotlib==2.2.2
-numpy==1.14.5
-odfpy==1.3.6
+matplotlib==3.0.2
+numpy==1.15.4
+odfpy==1.4.0
 pkg-resources==0.0.0
-psycopg2==2.7.5
-psycopg2-binary==2.7.5
-pyparsing==2.2.0
-python-dateutil==2.7.3
-pytz==2018.5
-six==1.11.0
-SQLAlchemy==1.2.9
+psycopg2==2.7.6.1
+pyparsing==2.3.0
+python-dateutil==2.7.5
+pytz==2018.7
+six==1.12.0
+SQLAlchemy==1.2.15
