--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ cycler==0.10.0
 defusedxml==0.5.0
 Django==2.1.5
 django-bootstrap-breadcrumbs==0.9.1
+django-widget-tweaks==1.4.3
 kiwisolver==1.0.1
 matplotlib==3.0.2
 numpy==1.15.4
