--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 cycler==0.10.0
 defusedxml==0.5.0
-Django==2.1.7
+Django==2.2.2
 django-bootstrap-breadcrumbs==0.9.1
 django-widget-tweaks==1.4.3
 kiwisolver==1.0.1
@@ -13,4 +13,6 @@ pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.7
 six==1.12.0
-SQLAlchemy==1.2.15
+SQLAlchemy==1.3.5
+sqlalchemy-datatables==1.2.0
+sqlparse==0.3.0
