--- a/systemd/tillweb.service
+++ b/systemd/tillweb.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Till web interface
 AssertPathExists=%h/tillweb/systemd/tillweb-uwsgi.conf
-After=network-online.target
+After=network-online.target postgresql.service
 Wants=network-online.target
 
 [Service]
