--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
+asgiref==3.2.3
+certifi==2019.11.28
+chardet==3.0.4
+cups==0.0.6
 cycler==0.10.0
-defusedxml==0.5.0
-Django==2.2.4
+defusedxml==0.6.0
+Django==3.0.3
 django-bootstrap-breadcrumbs==0.9.1
-django-widget-tweaks==1.4.3
-kiwisolver==1.0.1
-matplotlib==3.0.2
-numpy==1.15.4
-odfpy==1.4.0
+django-widget-tweaks==1.4.5
+idna==2.8
+kiwisolver==1.1.0
+matplotlib==3.1.3
+numpy==1.18.1
+oauthlib==3.1.0
+odfpy==1.4.1
+Pillow==7.0.0
 pkg-resources==0.0.0
-psycopg2==2.7.6.1
-pyparsing==2.3.0
-python-dateutil==2.7.5
-pytz==2018.7
-six==1.12.0
-SQLAlchemy==1.3.5
-sqlalchemy-datatables==1.2.0
+psycopg2==2.8.4
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytz==2019.3
+reportlab==3.5.34
+requests==2.22.0
+requests-oauthlib==1.3.0
+six==1.14.0
+SQLAlchemy==1.3.13
+sqlalchemy-datatables==2.0.1
 sqlparse==0.3.0
+urllib3==1.25.8
