--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,44 @@
+appdirs==1.4.3
 asgiref==3.2.3
+CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
+colorama==0.4.3
+contextlib2==0.6.0
 cups==0.0.6
 cycler==0.10.0
 defusedxml==0.6.0
-Django==3.0.7
+distlib==0.3.0
+distro==1.4.0
+Django==3.0.11
 django-bootstrap-breadcrumbs==0.9.2
 django-widget-tweaks==1.4.5
+html5lib==1.0.1
 idna==2.8
+ipaddr==2.2.0
 kiwisolver==1.1.0
+lockfile==0.12.2
 matplotlib==3.1.3
+msgpack==0.6.2
 numpy==1.18.1
 oauthlib==3.1.0
 odfpy==1.4.1
-Pillow==7.0.0
-pkg-resources==0.0.0
+packaging==20.3
+pep517==0.8.2
+Pillow==8.1.0
+progress==1.5
 psycopg2==2.8.4
 pyparsing==2.4.6
 python-dateutil==2.8.1
+pytoml==0.1.21
 pytz==2019.3
 reportlab==3.5.34
 requests==2.22.0
 requests-oauthlib==1.3.0
+retrying==1.3.3
 six==1.14.0
 SQLAlchemy==1.3.13
 sqlalchemy-datatables==2.0.1
 sqlparse==0.3.0
 urllib3==1.25.8
+webencodings==0.5.1
