--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 appdirs==1.4.3
-asgiref==3.2.3
+asgiref==3.4.1
 CacheControl==0.12.6
-certifi==2019.11.28
+certifi==2021.10.8
 chardet==3.0.4
+charset-normalizer==2.0.9
 colorama==0.4.3
 contextlib2==0.6.0
 cups==0.0.6
@@ -10,7 +11,7 @@ cycler==0.10.0
 defusedxml==0.6.0
 distlib==0.3.0
 distro==1.4.0
-Django==3.0.14
+Django==3.2.9
 django-bootstrap-breadcrumbs==0.9.2
 django-widget-tweaks==1.4.5
 html5lib==1.0.1
@@ -21,24 +22,24 @@ lockfile==0.12.2
 matplotlib==3.1.3
 msgpack==0.6.2
 numpy==1.18.1
-oauthlib==3.1.0
+oauthlib==3.1.1
 odfpy==1.4.1
 packaging==20.3
 pep517==0.8.2
-Pillow==8.2.0
+Pillow==8.4.0
 progress==1.5
-psycopg2==2.8.4
+psycopg2==2.9.2
 pyparsing==2.4.6
-python-dateutil==2.8.1
+python-dateutil==2.8.2
 pytoml==0.1.21
 pytz==2019.3
-reportlab==3.5.34
-requests==2.22.0
+reportlab==3.6.3
+requests==2.26.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
 six==1.14.0
-SQLAlchemy==1.3.13
+SQLAlchemy==1.3.24
 sqlalchemy-datatables==2.0.1
 sqlparse==0.3.0
-urllib3==1.25.8
+urllib3==1.26.7
 webencodings==0.5.1
