--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ cycler==0.10.0
 defusedxml==0.6.0
 distlib==0.3.0
 distro==1.4.0
-Django==3.2.9
+Django==3.2.11
 django-bootstrap-breadcrumbs==0.9.2
 django-widget-tweaks==1.4.5
 html5lib==1.0.1
@@ -26,7 +26,8 @@ oauthlib==3.1.1
 odfpy==1.4.1
 packaging==20.3
 pep517==0.8.2
-Pillow==8.4.0
+Pillow==9.0.0
+pkg_resources==0.0.0
 progress==1.5
 psycopg2==2.9.2
 pyparsing==2.4.6
