--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ django-widget-tweaks = "~1.4"
 psycopg2 = "~2.9"
 odfpy = "~1.4"
 sqlalchemy = "~1.3"
-quicktill = { path = "../quicktill", develop = true }
+quicktill = { path = "../quicktill", extras = ["tillweb"], develop = true }
 
 [tool.poetry.dev-dependencies]
 
